--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>Analiza UTM - MediaExpert Style</title>
+  <title>Analiza UTM </title>
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -72,7 +72,7 @@
 </head>
 <body>
 
-  <h1>🔧 Analizator linków i UTM (styl MediaExpert)</h1>
+  <h1>🔧 Analizator linków i UTM </h1>
 
   <textarea id="htmlInput" placeholder="Wklej tutaj kod HTML maila..."></textarea>
   <br>
